atualização de pages
Atualização de paginas e renderização

--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -1,2 +1,6 @@
 @import url(../../helpers/colorSchema.css);
 @import url(../../helpers/fontSchema.css);
+
+.container_header{
+    height: 200px;
+}
