--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,3 +1,8 @@
 @import url(../../helpers/colorSchema.css);
 @import url(../../helpers/fontSchema.css);
 
+.container_footer{
+    position: relative;
+    max-height: 200px;
+    width: 100%;
+}
